Remove theme setting to prevent default dark theme

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,7 @@ description: Complete money management app for Android
 url: "https://aethersolutionsph.github.io"
 baseurl: ""
 
-# Theme settings - No Jekyll theme, using custom CSS
-theme: null
-
+plugins: []
 # Build settings
 markdown: kramdown
 kramdown:
